2019-1/230/users/4033/executions/1682_1872.log
== TEST (2019-04-27 15:07:25) 
-- CODE:
x=float(input(" qual eh o valor de x: "))
y=float(input(" qual eh o valor de y: "))

if((x=0) and (y=0)):
	print("Origem")
elif((x<0) and (y>0)):
	print("Q1")
elif((x>0) and (y>0)):
	print("Q2")
elif((x<0) and (y<0)):
	print("Q3")
elif((x>0) and (y<0)):
	print("Q4")
elif((x>0) or (x<0) and (y=0)):
	print("Eixo X")
elif((y>0) or (y<0) and (x=0)):
	print("Eixo Y")
	

-- ERROR:
File "XXXX", line 4
    if((x=0) and (y=0)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:07:57) 
-- CODE:
x=float(input(" qual eh o valor de x: "))
y=float(input(" qual eh o valor de y: "))

if((x==0) and (y==0)):
	print("Origem")
elif((x<0) and (y>0)):
	print("Q1")
elif((x>0) and (y>0)):
	print("Q2")
elif((x<0) and (y<0)):
	print("Q3")
elif((x>0) and (y<0)):
	print("Q4")
elif((x>0) or (x<0) and (y==0)):
	print("Eixo X")
elif((y>0) or (y<0) and (x==0)):
	print("Eixo Y")
	

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:08:13) 
-- CODE:
x=float(input(" qual eh o valor de x: "))
y=float(input(" qual eh o valor de y: "))

if((x==0) and (y==0)):
	print("Origem")
elif((x<0) and (y>0)):
	print("Q1")
elif((x>0) and (y>0)):
	print("Q2")
elif((x<0) and (y<0)):
	print("Q3")
elif((x>0) and (y<0)):
	print("Q4")
elif((x>0) or (x<0) and (y==0)):
	print("Eixo X")
elif((y>0) or (y<0) and (x==0)):
	print("Eixo Y")
	

-- EXECUTION TIME:
0.144212
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
